--- a/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_listing_item.xml
@@ -179,7 +179,7 @@
                     android:paddingRight="10dp"
                     android:paddingBottom="10dp"
                     android:src="@drawable/ic_watch"
-                    android:visibility="invisible" />
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <LinearLayout
