--- a/MyCity4Kids/MyCity4Kids/res/layout/featured_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/featured_item.xml
@@ -36,7 +36,7 @@
             android:id="@+id/itemTypeImageView"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignRight="@id/itemImageView"
+            android:layout_alignEnd="@id/itemImageView"
             android:layout_alignBottom="@id/itemImageView"
             android:background="#000000"
             android:padding="@dimen/space_5"
