--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_share_card_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_share_card_view.xml
@@ -97,11 +97,14 @@
             android:layout_below="@+id/authorBioTextViewBitmap"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp">
 
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_marginEnd="8dp"
                 android:src="@drawable/ic_profile_languages_icon"
                 android:tint="@color/app_light_pink" />
 
@@ -122,6 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/contentLangContainerBitmap"
+            android:layout_marginTop="4dp"
             android:clipToPadding="false"
             android:paddingBottom="10dp">
 
@@ -136,7 +140,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/rankContainerBitmap"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.1">
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/postsCountTextViewBitmap"
@@ -153,7 +158,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:gravity="center"
-                    android:minLines="2"
+                    android:lines="2"
                     android:text="@string/blogger_profile.article_count_label"
                     android:textColor="@color/app_grey"
                     android:textSize="12sp" />
@@ -170,7 +175,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/followingContainerBitmap"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/rankContainerBitmap"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.1">
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/followerCountTextViewBitmap"
@@ -187,7 +193,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:gravity="center"
-                    android:minLines="2"
+                    android:lines="2"
                     android:text="@string/myprofile.followers_label"
                     android:textColor="@color/app_grey"
                     android:textSize="12sp" />
@@ -204,7 +210,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/followerContainerBitmap"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.1">
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/followingCountTextViewBitmap"
@@ -221,7 +228,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:gravity="center"
-                    android:minLines="2"
+                    android:lines="2"
                     android:text="@string/myprofile.following_label"
                     android:textColor="@color/app_grey"
                     android:textSize="12sp" />
@@ -238,7 +245,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/followerContainerBitmap"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/postsCountContainerBitmap"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.1">
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/rankCountTextViewBitmap"
@@ -256,7 +264,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:gravity="center"
-                    android:minLines="2"
+                    android:lines="2"
                     android:text=""
                     android:textColor="@color/app_grey"
                     android:textSize="12sp" />
