--- a/MyCity4Kids/MyCity4Kids/res/layout/badge_dialog_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/badge_dialog_fragment.xml
@@ -130,7 +130,7 @@
             app:layout_constraintEnd_toStartOf="@+id/facebookShareImageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:src="@drawable/ic_badge_whatsapp" />
+            app:srcCompat="@drawable/ic_badge_whatsapp" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/facebookShareImageView"
@@ -142,7 +142,7 @@
             app:layout_constraintEnd_toStartOf="@+id/instagramShareImageView"
             app:layout_constraintStart_toEndOf="@+id/whatsappShareImageView"
             app:layout_constraintTop_toTopOf="parent"
-            app:src="@drawable/ic_badge_facebook" />
+            app:srcCompat="@drawable/ic_badge_facebook" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/instagramShareImageView"
@@ -154,7 +154,7 @@
             app:layout_constraintEnd_toStartOf="@+id/genericShareImageView"
             app:layout_constraintStart_toEndOf="@+id/facebookShareImageView"
             app:layout_constraintTop_toTopOf="parent"
-            app:src="@drawable/ic_badge_instagram" />
+            app:srcCompat="@drawable/ic_badge_instagram" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/genericShareImageView"
@@ -164,7 +164,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/instagramShareImageView"
             app:layout_constraintTop_toTopOf="parent"
-            app:src="@drawable/ic_badge_generic" />
+            app:srcCompat="@drawable/ic_badge_generic" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.facebook.shimmer.ShimmerFrameLayout
