ui bugs  and editInfo tab added in profile setting

--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_profile_setting.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_profile_setting.xml
@@ -76,6 +76,19 @@
                 android:textSize="16sp" />
 
             <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/edit_Profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_20"
+                android:layout_marginRight="@dimen/space_8"
+                android:drawableLeft="@drawable/ic_profile"
+                android:drawableRight="@drawable/arrow_right"
+                android:drawablePadding="@dimen/space_20"
+                android:text="Edit profile"
+                android:textColor="@color/campaign_4A4A4A"
+                android:textSize="16sp" />
+
+            <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/mymoney_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
