--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_profile_setting.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_profile_setting.xml
@@ -73,7 +73,8 @@
                 android:drawablePadding="@dimen/space_20"
                 android:text="@string/personal_info"
                 android:textColor="@color/campaign_4A4A4A"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:visibility="gone" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/edit_Profile"
